--- a/EmployeeAplication/Views/Home/Index.cshtml
+++ b/EmployeeAplication/Views/Home/Index.cshtml
@@ -3,6 +3,15 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-1">Welcome</h1>
+    <h4>ASP.NET core mvc application with following feature</h4>
+    <ul>
+        <li>code first approach</li>
+        <li>login/registration with Identity Framework</li>
+        <li>basic crud opeartion only for autherize user</li>
+    </ul>
+    <h4>Future scope</h4>
+    <p>* implementation Autherization with Roles</p>
+    <p>custome error page</p>
+    <p>Better UI</p>
 </div>
