--- a/EmployeeAplication/Views/Employees/Index.cshtml
+++ b/EmployeeAplication/Views/Employees/Index.cshtml
@@ -9,9 +9,10 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
-    <thead>
+<table class="table table-hover">
+    <thead class="thead-dark">
         <tr>
+            <th scope="col">#</th>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
@@ -33,6 +34,7 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <th scope="row"></th>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
