--- a/EmployeeAplication/Views/Shared/_Layout.cshtml
+++ b/EmployeeAplication/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - EmployeeAplication - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - Amol Bundhe - <a href="https://www.linkedin.com/in/amol-bundhe">LinkedIn</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
